--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <div class="banner">
-            <div class="banner-text">
-                <h1>
-                    Welcome to Hogwarts
-                </h1>
-            </div>
+            <h1 class="banner-text">
+                Welcome <br>
+                to Hogwarts
+            </h1>
+            
         </div>
         <nav>
             <ul>
@@ -38,29 +38,75 @@
     </header>
     <main>
         <h2>Why study with us?</h2>
-        <div class="flex">
-            <div class="flex-image">
-                <img src="Files/horntail.jpg">
+        <div class="content">
+            <div class="contentRow">
+                <img class="flex-image" src="Files/horntail.jpg" alt="picture of horntail dragon">
+                <div class="flex-text">
+                    <h3>Danger!</h3>
+                    <p>Yeah, you could go to a normal school and feel safe... Or
+                        <br>you could come here where we will actively throw you in to
+                        <br>life threatening situations!
+                        <br>
+                        <br>We will ease you in gently, where you will enjoy the delights
+                        <br>of backfiring spells exploding in your face. From there we will
+                        <br>progress you to fighting an assortment of dangerous
+                        <br>creatures. You may even get the opportunity to risk your life
+                        <br>against huge dragons for sport! Cool as, right?
+                        <br>
+                        <br>Even some of our staff are happy to concuss you with a book
+                        <br>if you don't look like you're studying.
+                    </p>
+                </div>
             </div>
-            <div>
-                Danger
+            <div class="contentRow">
+                <div class="flex-text">
+                    <h3>Nature!</h3>
+                    <p>
+                        Do you like nature? Great! As you walk around our grounds
+                        <br>you will quickly learn that nature here doesn't like you!
+                        <br>
+                        <br>Get up close and personal with our willow tree and discover
+                        <br>that you never truly get a day off from life threatening
+                        <br>situations around here.
+                        <br>
+                        <br>Do you like spiders? Great! We have GIANT hairy ones that you
+                        <br>can totally chat to before experiencing the thrill of running
+                        <br>for your life.
+                    </p>
+                </div>
+                <img class="flex-image" src="Files/willow.jpg" alt="picture of a willow">
             </div>
-            <div>
-                Nature
-            </div>
-            <div class="flex-image">
-                <img src="Files/willow.jpg">
-            </div>
-            <div class="flex-image">
-                <img src="Files/fight.jpg">
-            </div>
-            <div>
-                The Chosen One Package!!!
+            <div class="contentRow">
+                <img class="flex-image" src="Files/fight.jpg" alt="picture of a fight between Harry and Voldemort">
+                <div class="flex-text">
+                    <h3>The Chosen One Package!!!</h3>
+                    <p>
+                        If you need more, don't worry - we got you!
+                        <br>
+                        <br>Upgrade to our chosen one package and we will provide you
+                        <br>with your very own arch enemy who will stop at nothing to
+                        <br>eviscerate you!
+                        <br>
+                        <br>You'll also have an amazing time learning politics as your
+                        <br>enemy takes control of the government and turns the whole
+                        <br>world against you!
+                        <br>
+                        <br>Still not enough?! Well, if you hang on in there you will finally
+                        <br>get a boss battle where the stakes are legitimately high. How 
+                        <br>cool is that?!
+                    </p>
+                </div>
             </div>
         </div>
     </main>
     <footer>
-
+        <h2>Testimonials</h2>
+        <div class="comments">
+            <p>"Uuuuuuur Ahhhhhrrrrr Uhrrrrr Ahhhhhrrrr Aaaarhg" - Chewbacca</p>
+            <p>"Hyeeh kyaah hyaaah haa hyet haa" - Link</p>
+            <p>"..." - Red</p>
+            <p>"This place is not sus!" - Among Us player</p>
+        </div>
     </footer>
 </body>
 </html>
